Estudos em cima do SPADE e construção de estruturas auxiliares.

--- a/.gitignore
+++ b/.gitignore
@@ -146,6 +146,7 @@ venv/
 ENV/
 env.bak/
 venv.bak/
+edu_env/
 
 # Spyder project settings
 .spyderproject
@@ -208,3 +209,5 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+devops/mysql/mysql_data/
